# multi-agents

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
agents/examples/simple_agent/: __init__.py  agent.py  edges.py
agents/examples/simple_agent/nodes/: num_words.py  palindrome.py  stentence_palindrome.py
agents/graph/: __init__.py  agent_graph.py
multi_agents/examples/simple_multi_agent/: __init__.py  multi_agent.py  schema.py
multi_agents/examples/simple_multi_agent/edges/: edges.py  routers.py
multi_agents/examples/simple_multi_agent/nodes/: num_words.py  palindrome.py  stentence_palindrome.py
multi_agents/graph/: __init__.py  multi_agent_graph.py
notebooks/01-esamples/: 01-simple-agent.ipynb
notebooks/01-examples/: 01-simple-multi-agent.ipynb
src/multi_agents/examples/simple_multi_agent/: multi_agent.py  schema.py
src/multi_agents/examples/simple_multi_agent/edges/: __init__.py
src/multi_agents/examples/simple_multi_agent/nodes/: __init__.py  num_words.py
src/multi_agents/graph/: multi_agent_graph.py
